2009-03-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer.h: Added overloaded make_silent(int channel).

2009-03-24  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp: Removed is_engine_started() and replaced
	it with is_engine_created() that has slightly different semantics.
	* eca-control-base.h: Added is_engine_running().

2009-03-23  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer.h: copy_range() now requires the object channel
	counts to match.

2009-03-22  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer.h: Renamed copy() member function into
	copy_matching_channels() to more accurately describe 
	the semantics.
	* samplebuffer.h: Renamed add() into add_matching_channels().
	* samplebuffer.h: Added copy_all_content().
	* samplebuffer.h: Added event_tag_set(), event_tag_test(), 
	event_tags_set(), event_tags_add() and event_tags_clear()
	member functions. Added new Tag_name enum type.
	* library interface version to 22:0:0

2009-03-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer_iterators.h: Added optional second argument
	to SAMPLE_ITERATOR_CHANNEL::init() and an overloaded
	version of SAMPLE_ITERATOR_CHANNEL::begin().

2009-02-08  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 21:0:1 frozen (2.6.0 release)

2009-02-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-object-map.h (toggle_case_sensitive_expressions,
	case_sensitive_expressions): Member functions added.

2009-01-31  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-test-case.h (run): A new overloaded function taking 
	a string argument added.
	* eca-chainsetup-parser.h (interpret_audio_format): Corrected
	function signature, may throw an exception.
	
2008-09-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-logger.h (ECA_LOG_MSG_NOPREFIX): Added.

2008-09-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup-parser.cpp (interpret_options): Now takes a const
	vector.
	* eca-chainsetup.cpp (interpret_options): Now takes a const
	vector.
